--- a/force-app/main/default/lwc/orderManagement/orderManagement.css
+++ b/force-app/main/default/lwc/orderManagement/orderManagement.css
@@ -1,5 +1,5 @@
 * {
-    
+
 }
 
 .layoutHeader {
@@ -12,7 +12,7 @@
 .layoutFilter {
     margin-top: 20px;
     width: 500px;
-    height: 500px;
+    min-height: 605px;
     background-color: gray;
     border: 2px solid;
 }
@@ -20,8 +20,30 @@
 .layoutSearch {
     margin-top: 20px;
     margin-left: 20px;
-    width: 1328px;
-    height: 500px;
+    width: 1100px;
+    height: 30px;
     background-color: gray;
     border: 2px solid;
+}
+
+.layoutProduct {
+    margin-top: 20px;
+    margin-left: 20px;
+    width: 1160px;
+    min-height: 580px;
+    background-color: gray;
+}
+
+.product {
+    margin-bottom: 50px;
+    margin-right: 30px;
+    width: 252px;
+    height: 252px;
+    background-color: gray;
+    border: 2px solid;
+    display: inline-block;
+}
+
+.THIS .slds-button_brand {
+    color:red;
 }
