fixed bug with unfilled description field

--- a/force-app/main/default/lwc/orderManagement/orderManagement.css
+++ b/force-app/main/default/lwc/orderManagement/orderManagement.css
@@ -82,6 +82,7 @@
     background-color: gray;
     border: 2px solid;
     display: inline-block;
+    position: relative;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
