background color for chosen type and family

--- a/force-app/main/default/lwc/orderManagement/orderManagement.css
+++ b/force-app/main/default/lwc/orderManagement/orderManagement.css
@@ -139,3 +139,13 @@
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   background-color: gray;
 }
+
+.selectedType-color {
+    background-color: black;
+    color: white;
+}
+
+.selectedFamily-color {
+    background-color: black;
+    color: white;
+}
